Driver tracking and Student Tracking completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kkwbustracking">
 
     <!--
@@ -9,10 +10,11 @@
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/tracking_app"
+        android:icon="@drawable/bus_tracking_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -30,17 +32,12 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity
-            android:name=".MapsActivity">
-
-        </activity>
-
-        <activity android:name=".student_tracklocation"/>
-        <activity android:name=".driver_login"/>
-        <activity android:name=".driver_tracklocation"/>
-        <activity android:name=".about"/>
-        <activity android:name=".Splash_Screen"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".MapsActivity"/>
+        <activity android:name=".student_tracklocation" />
+        <activity android:name=".driver_login" />
+        <activity android:name=".driver_tracklocation" />
+        <activity android:name=".about" />
+        <activity android:name=".Splash_Screen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
